<resources>
    <string name="app_name">Bidas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="device_name">device_name</string>
    <string name="serial_number">serial_number</string>
    <string name="hardware_revision">hardware_revision</string>
    <string name="software_revision">software_revision</string>
    <string name="cancel">cancel</string>
</resources>
